--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7885043
-	trimbase = 
+	trim = ouster_msgs
+	base = 29033a7
+	trimbase = 7885043
 	parent = upstream
 	previous = 8476625
