--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 29033a7
+	base = a991c89
 	trimbase = 
 	parent = release/eloquent/ouster_msgs
-	previous = 
+	previous = 29033a7
