--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 92d527e
+	base = 3df0ae5
 	trimbase = 
 	parent = debian/eloquent/ouster_msgs
-	previous = 
+	previous = 92d527e
