--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 230ac42
+	base = 338e40a
 	trimbase = 
 	parent = release/eloquent/ros2_ouster
-	previous = 
+	previous = 230ac42
