--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = b8b4d40
+	base = e37b21c
 	trimbase = 
 	parent = debian/eloquent/ros2_ouster
-	previous = 
+	previous = b8b4d40
