--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 64679c3
-	trimbase = 
+	trim = ros2_ouster
+	base = 24e364b
+	trimbase = 64679c3
 	parent = upstream
 	previous = 6e7f225
