--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
-	trim = 
-	base = 7b93153
-	trimbase = 
+	trim = ouster_msgs
+	base = 7166642
+	trimbase = 7b93153
 	parent = upstream
 	previous = 6e7f225
