--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 7166642
+	base = 1c8024c
 	trimbase = 
 	parent = release/dashing/ouster_msgs
-	previous = 
+	previous = 7166642
