--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = 
-	base = 5c58482
+	base = f9931b1
 	trimbase = 
 	parent = debian/dashing/ouster_msgs
-	previous = 
+	previous = 5c58482
