--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros2_ouster
-	base = d2bcd6e
-	trimbase = 
+	base = dbe3e57
+	trimbase = d2bcd6e
 	parent = upstream
 	previous = 5278bd7
