--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ouster_msgs
-	base = b402388
-	trimbase = 
+	base = 1928c24
+	trimbase = b402388
 	parent = upstream
 	previous = 5278bd7
