--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros2_ouster
-	base = c07db30
-	trimbase = 
+	base = 8e15081
+	trimbase = c07db30
 	parent = upstream
 	previous = 2faadd5
