--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ros2_ouster
-	base = e163efc
-	trimbase = 
+	base = 3ab1ac8
+	trimbase = e163efc
 	parent = upstream
 	previous = 2faadd5
