--- a/patches.conf
+++ b/patches.conf
@@ -1,6 +1,6 @@
 [patches]
 	trim = ouster_msgs
-	base = 9160e08
-	trimbase = 
+	base = ab35e31
+	trimbase = 9160e08
 	parent = upstream
 	previous = 2faadd5
